# draexie_rag_chatbot

./: .gitignore  .webui_secret_key  PDF_testcase.py  README.md  app.py  backend.py  config.py  create_database.py  draexie-demo.html  generate_draexie_js.py  ingest.py  package-lock.json  parse_and_refactor.py  pyproject.toml  rag.py  rebuild_progress.py  requirements.txt  run_tests.sh  start.sh
.obsidian/: workspace.json
chunking/: chunker.py
data/qdrant_storage/: meta.json
embedding/: embedder.py
frontend/: README.md  app.js  app.ts  index.html  metadata.json  package-lock.json  package.json  server.ts  style.css  tsconfig.json  vite.config.ts
frontend/new frontend/stitch_dr_xie_multi_tenant_ai_assistant(1)/stitch_dr_xie_multi_tenant_ai_assistant/: style.css
frontend/new frontend/stitch_dr_xie_multi_tenant_ai_assistant/dr_xie_branded_welcome_state_1/: code.html
frontend/public/: draexie-mascot.js  mascot-demo.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ArtifactRenderer.tsx  Mascot.tsx  TimelineArtifact.tsx
frontend/src/hooks/: useChat.ts
frontend_backup/: .temp_script.js  .temp_svg.txt  app.js  app.ts  draexie-mascot.js  draexie-mascot.js.raw  draexie-v2.html  index.html  style.css
generation/: __init__.py  generator.py  verifier.py
ingestion/: __init__.py  docling_loader.py  fetcher.py  pipeline.py
retrieval/: retriever.py
tests/: PDF_testcase.py  conftest.py  excel_test.py  ppt_test.py  test_rag.py  word_testcase.py
vectorstore/: __init__.py  store.py
(+17 files in other folders)
