[project]
name = "draxil-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-ollama",
    "langchain-qdrant",
    "fastembed",
    "langchain-huggingface",
    "langchain-text-splitters",
    "langchain-docling",
    "qdrant-client",
    "docling",
    "sentence-transformers",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-multipart",
    "python-dotenv",
    "torch",
    "tiktoken",
    "xlrd",
    "openpyxl",
    "wand>=0.7.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest",
]
